[tool.poetry]
name = "bitcoin-decoder"
version = "0.1.0"
description = ""
authors = ["ken"]
readme = "README.md"
packages = [{include = "bitcoin_decoder"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.89.1"
uvicorn = "^0.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
